# Stride

./: README.md
backend/: .template.env  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 540dd534b408_initial.py
backend/app/: main.py
backend/app/core/config/: settings.py
backend/app/core/db/: dependency.py  model_registry.py  session.py  supabase.py
backend/app/routes/: tasks.py
backend/app/schemas/: tasks_schemas.py
mobile/: app.json  package.json
mobile/app/: _layout.tsx
mobile/app/(splash)/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  home.tsx  profile.tsx  strideAi.tsx  tasks.tsx
mobile/components/: Calender.tsx  HolderContainer.tsx  ProfileImageHolder.tsx  SearchBar.tsx
mobile/hooks/: useCustomFonts.ts
